--- a/CHD_data_analysis.ipynb
+++ b/CHD_data_analysis.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": 460,
    "id": "c5709074",
    "metadata": {},
    "outputs": [
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 461,
    "id": "69ea390d",
    "metadata": {},
    "outputs": [
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": 462,
    "id": "29b8b2dc",
    "metadata": {},
    "outputs": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": 463,
    "id": "4edc6c00",
    "metadata": {},
    "outputs": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 464,
    "id": "09bb9ae7",
    "metadata": {},
    "outputs": [
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
+   "execution_count": 465,
    "id": "9e4c8751",
    "metadata": {},
    "outputs": [
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": 466,
    "id": "3dc782ae",
    "metadata": {},
    "outputs": [
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": 467,
    "id": "32d4e27c",
    "metadata": {},
    "outputs": [
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
+   "execution_count": null,
    "id": "229f7c38",
    "metadata": {},
    "outputs": [
@@ -665,7 +665,8 @@
      "output_type": "stream",
      "text": [
       "Processing the 'cigsPerDay' column: a total of 0 missing values were filled in (0 among smokers, 0 among non-smokers)\n",
-      "Processed data saved successfully as 'framingham_filled.csv'\n"
+      "Processed data saved successfully as 'framingham_filled.csv'\n",
+      "警告：仍存在29个未填充的缺失值\n"
      ]
     }
    ],
@@ -689,7 +690,8 @@
     "print(f\"Processing the 'cigsPerDay' column: a total of {total_missing_cigs} missing values were filled in ({missing_cigs_smoker} among smokers, {missing_cigs_non_smoker} among non-smokers)\")\n",
     "\n",
     "df.to_csv('framingham_filled.csv', index=False)\n",
-    "print(\"Processed data saved successfully as 'framingham_filled.csv'\")"
+    "print(\"Processed data saved successfully as 'framingham_filled.csv'\")\n",
+    "\n"
    ]
   },
   {
@@ -702,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 446,
+   "execution_count": 469,
    "id": "a14846d8",
    "metadata": {},
    "outputs": [
@@ -746,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 470,
    "id": "e48dd9e7",
    "metadata": {},
    "outputs": [
@@ -782,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 471,
    "id": "137e14ca",
    "metadata": {},
    "outputs": [
@@ -847,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 449,
+   "execution_count": 472,
    "id": "9e7874b8",
    "metadata": {},
    "outputs": [
@@ -877,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 450,
+   "execution_count": 473,
    "id": "8ec02f12",
    "metadata": {},
    "outputs": [
@@ -909,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 451,
+   "execution_count": 474,
    "id": "b2684e52",
    "metadata": {},
    "outputs": [
@@ -956,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": 475,
    "id": "e21eeaf8",
    "metadata": {},
    "outputs": [
@@ -986,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 453,
+   "execution_count": 476,
    "id": "8d622325",
    "metadata": {},
    "outputs": [
@@ -1018,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 477,
    "id": "c038d8c8",
    "metadata": {},
    "outputs": [
@@ -1048,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 478,
    "id": "3a5b6366",
    "metadata": {},
    "outputs": [
@@ -1080,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 479,
    "id": "3f86a4dd",
    "metadata": {},
    "outputs": [
@@ -1110,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 480,
    "id": "efbe7f35",
    "metadata": {},
    "outputs": [
@@ -1142,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 458,
+   "execution_count": 481,
    "id": "dc2f7fa3",
    "metadata": {},
    "outputs": [
@@ -1200,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 459,
+   "execution_count": 482,
    "id": "b49675ae",
    "metadata": {},
    "outputs": [
