--- a/CHD_data_analysis.ipynb
+++ b/CHD_data_analysis.ipynb
@@ -532,9 +532,13 @@
    "id": "d41a1f7e",
    "metadata": {},
    "source": [
-    "During the analysis of the dataset, I noticed that there were some missing values in the education column. In order to minimize the impact of these missing values on subsequent analysis results, and based on the characteristics of the education column data, I decided to use the mode imputation method to handle these missing values.\n",
+    "We handle missing values in the 'education' column by 'filling with the mode of each age group.'\n",
     "\n",
-    " The advantage of this approach is that it preserves the original distribution characteristics of the education column data while avoiding potential analysis bias caused by missing data."
+    " The main reasons are as follows:\n",
+    " \n",
+    "  on one hand, directly deleting samples with missing values can lead to loss of valuable data, reduce the sample size, potentially change the distribution characteristics of the original data, and thus affect the accuracy of subsequent analyses. \n",
+    "  \n",
+    "  Additionally, most statistical tools cannot directly process data with missing values, so filling in missing values is essential for ensuring data completeness and meeting analytical needs. On the other hand, missing values may contain latent information such as 'differences in response habits among different age groups.' Filling them with a global value would ignore the intrinsic association between age and educational level (for example, people from different generations have had different educational opportunities; the mainstream educational level of the 30–40 age group may differ significantly from that of the 60–70 age group). Processing by age group more closely aligns with the actual data patterns."
    ]
   },
   {
