异常值分析完成

--- a/CHD_data_analysis.ipynb
+++ b/CHD_data_analysis.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 373,
    "id": "c5709074",
    "metadata": {},
    "outputs": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 374,
    "id": "69ea390d",
    "metadata": {},
    "outputs": [
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 375,
    "id": "157d945f",
    "metadata": {},
    "outputs": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 376,
    "id": "4ff98b03",
    "metadata": {},
    "outputs": [],
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 377,
    "id": "29b8b2dc",
    "metadata": {},
    "outputs": [
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 378,
    "id": "4edc6c00",
    "metadata": {},
    "outputs": [
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 379,
    "id": "1b472d1b",
    "metadata": {},
    "outputs": [
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 380,
    "id": "bdfc0a3b",
    "metadata": {},
    "outputs": [
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 381,
    "id": "09bb9ae7",
    "metadata": {},
    "outputs": [
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 382,
    "id": "9e4c8751",
    "metadata": {},
    "outputs": [
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 383,
    "id": "3dc782ae",
    "metadata": {},
    "outputs": [
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 384,
    "id": "a14846d8",
    "metadata": {},
    "outputs": [
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 385,
    "id": "713b8596",
    "metadata": {},
    "outputs": [
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 386,
    "id": "e48dd9e7",
    "metadata": {},
    "outputs": [
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 387,
    "id": "137e14ca",
    "metadata": {},
    "outputs": [
@@ -1058,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 388,
    "id": "9e7874b8",
    "metadata": {},
    "outputs": [
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 389,
    "id": "8ec02f12",
    "metadata": {},
    "outputs": [
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 390,
    "id": "b2684e52",
    "metadata": {},
    "outputs": [
@@ -1229,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 391,
    "id": "e21eeaf8",
    "metadata": {},
    "outputs": [
@@ -1259,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 392,
    "id": "8d622325",
    "metadata": {},
    "outputs": [
@@ -1320,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 393,
    "id": "c038d8c8",
    "metadata": {},
    "outputs": [
@@ -1350,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 394,
    "id": "3a5b6366",
    "metadata": {},
    "outputs": [
@@ -1411,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 395,
    "id": "3f86a4dd",
    "metadata": {},
    "outputs": [
@@ -1441,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 396,
    "id": "efbe7f35",
    "metadata": {},
    "outputs": [
@@ -1502,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 397,
    "id": "dc2f7fa3",
    "metadata": {},
    "outputs": [
@@ -1560,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 398,
    "id": "b49675ae",
    "metadata": {},
    "outputs": [
@@ -1568,50 +1568,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "each column missing values handled:\n",
+      "                 original_missing  post_fill_missing  handled_missing\n",
+      "male                            0                  0                0\n",
+      "age                             0                  0                0\n",
+      "education                     105                  0              105\n",
+      "currentSmoker                   0                  0                0\n",
+      "cigsPerDay                     29                  0               29\n",
+      "BPMeds                         53                  0               53\n",
+      "prevalentStroke                 0                  0                0\n",
+      "prevalentHyp                    0                  0                0\n",
+      "diabetes                        0                  0                0\n",
+      "totChol                        50                  0               50\n",
+      "sysBP                           0                  0                0\n",
+      "diaBP                           0                  0                0\n",
+      "BMI                            19                  0               19\n",
+      "heartRate                       1                  0                1\n",
+      "glucose                       388                  0              388\n",
+      "TenYearCHD                      0                  0                0\n",
       "\n",
-      "the missing values in each column:\n",
-      "male               0\n",
-      "age                0\n",
-      "education          0\n",
-      "currentSmoker      0\n",
-      "cigsPerDay         0\n",
-      "BPMeds             0\n",
-      "prevalentStroke    0\n",
-      "prevalentHyp       0\n",
-      "diabetes           0\n",
-      "totChol            0\n",
-      "sysBP              0\n",
-      "diaBP              0\n",
-      "BMI                0\n",
-      "heartRate          0\n",
-      "glucose            0\n",
-      "TenYearCHD         0\n",
-      "age_group          2\n",
-      "dtype: int64\n"
+      "Total missing values handled: 645\n"
      ]
     }
    ],
    "source": [
+    "# compare the missing values before and after fill\n",
+    "df_original = pd.read_csv('framingham.csv')  \n",
     "df_filled = pd.read_csv('framingham_filled.csv')\n",
-    "missing_values = df_filled.isnull().sum()\n",
-    "print(\"\\nthe missing values in each column:\")\n",
-    "print(missing_values)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4739fc4e",
-   "metadata": {},
-   "source": [
-    "## Outlier processing"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "79e93e05",
-   "metadata": {},
-   "source": [
-    "After careful examination, we did not find any obvious outliers."
+    "\n",
+    "# calculate the missing values before and after fill\n",
+    "original_columns = df_original.columns\n",
+    "missing_original = df_original[original_columns].isnull().sum()\n",
+    "missing_filled = df_filled[original_columns].isnull().sum()\n",
+    "\n",
+    "# calculate the number of missing values handled (original missing - post-fill missing)\n",
+    "handled_missing = missing_original - missing_filled\n",
+    "\n",
+    "# merge into a comparison table\n",
+    "missing_comparison = pd.DataFrame({\n",
+    "    'original_missing': missing_original,\n",
+    "    'post_fill_missing': missing_filled,\n",
+    "    'handled_missing': handled_missing\n",
+    "})\n",
+    "\n",
+    "# calculate the total number of missing values handled\n",
+    "total_handled = handled_missing.sum()\n",
+    "\n",
+    "# print the comparison table and total handled missing values\n",
+    "print(\"each column missing values handled:\")\n",
+    "print(missing_comparison)\n",
+    "print(f\"\\nTotal missing values handled: {total_handled}\")\n"
    ]
   },
   {
@@ -1632,7 +1638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 399,
    "id": "b77828ac",
    "metadata": {},
    "outputs": [
@@ -1692,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 400,
    "id": "b5213e14",
    "metadata": {},
    "outputs": [
@@ -1761,7 +1767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 401,
    "id": "c4a7df8f",
    "metadata": {},
    "outputs": [
@@ -1814,7 +1820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 402,
    "id": "899c65e5",
    "metadata": {},
    "outputs": [
@@ -1892,7 +1898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 403,
    "id": "6c2cb902",
    "metadata": {},
    "outputs": [
