基本完成数据分析

--- a/CHD_data_analysis.ipynb
+++ b/CHD_data_analysis.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 528,
    "id": "c5709074",
    "metadata": {},
    "outputs": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 529,
    "id": "69ea390d",
    "metadata": {},
    "outputs": [
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 530,
    "id": "157d945f",
    "metadata": {},
    "outputs": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 531,
    "id": "4ff98b03",
    "metadata": {},
    "outputs": [],
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 532,
    "id": "29b8b2dc",
    "metadata": {},
    "outputs": [
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 533,
    "id": "4edc6c00",
    "metadata": {},
    "outputs": [
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 534,
    "id": "1b472d1b",
    "metadata": {},
    "outputs": [
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 535,
    "id": "bdfc0a3b",
    "metadata": {},
    "outputs": [
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 536,
    "id": "09bb9ae7",
    "metadata": {},
    "outputs": [
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 537,
    "id": "9e4c8751",
    "metadata": {},
    "outputs": [
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 538,
    "id": "3dc782ae",
    "metadata": {},
    "outputs": [
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 539,
    "id": "a14846d8",
    "metadata": {},
    "outputs": [
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 540,
    "id": "713b8596",
    "metadata": {},
    "outputs": [
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 541,
    "id": "e48dd9e7",
    "metadata": {},
    "outputs": [
@@ -946,7 +946,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing the 'BPMeds' column: dropped 53 rows with missing values\n",
       "Processed data saved successfully as 'framingham_filled.csv'\n"
      ]
     },
@@ -967,8 +966,6 @@
     "\n",
     "# Drop rows where 'BPMeds' is NA\n",
     "df = df.dropna(subset=['BPMeds'])\n",
-    "\n",
-    "print(f\"Processing the 'BPMeds' column: dropped {missing_bpmeds} rows with missing values\")\n",
     "\n",
     "df.to_csv('framingham_filled.csv', index=False)\n",
     "print(\"Processed data saved successfully as 'framingham_filled.csv'\")\n",
@@ -996,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 542,
    "id": "137e14ca",
    "metadata": {},
    "outputs": [
@@ -1058,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 543,
    "id": "9e7874b8",
    "metadata": {},
    "outputs": [
@@ -1067,6 +1064,7 @@
      "output_type": "stream",
      "text": [
       "Processing the 'totChol' column: filled 49 missing values\n",
+      "The proportion of missing values in the totChol column to the total: 1.17%\n",
       "Processed data saved successfully as 'framingham_filled.csv'\n"
      ]
     }
@@ -1079,8 +1077,10 @@
     "median_totChol = df['totChol'].median()\n",
     "# Fill missing values with the median\n",
     "df['totChol'] = df['totChol'].fillna(median_totChol)\n",
+    "missing_ratio = (missing_totChol / len(df)) * 100\n",
     "\n",
     "print(f\"Processing the 'totChol' column: filled {missing_totChol} missing values\")\n",
+    "print(f\"The proportion of missing values in the totChol column to the total: {missing_ratio:.2f}%\")\n",
     "\n",
     "df.to_csv('framingham_filled.csv', index=False)\n",
     "print(\"Processed data saved successfully as 'framingham_filled.csv'\")\n",
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 544,
    "id": "8ec02f12",
    "metadata": {},
    "outputs": [
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 545,
    "id": "b2684e52",
    "metadata": {},
    "outputs": [
@@ -1229,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 546,
    "id": "e21eeaf8",
    "metadata": {},
    "outputs": [
@@ -1238,6 +1238,7 @@
      "output_type": "stream",
      "text": [
       "Processing the 'BMI' column: filled 19 missing values\n",
+      "The proportion of missing values in the BMI column to the total: 0.45%\n",
       "Processed data saved successfully as 'framingham_filled.csv'\n"
      ]
     }
@@ -1252,6 +1253,8 @@
     "df['BMI'] = df['BMI'].fillna(median_BMI)\n",
     "\n",
     "print(f\"Processing the 'BMI' column: filled {missing_BMI} missing values\")\n",
+    "missing_ratio = (missing_BMI / len(df)) * 100\n",
+    "print(f\"The proportion of missing values in the BMI column to the total: {missing_ratio:.2f}%\") \n",
     "\n",
     "df.to_csv('framingham_filled.csv', index=False)\n",
     "print(\"Processed data saved successfully as 'framingham_filled.csv'\")"
@@ -1259,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 547,
    "id": "8d622325",
    "metadata": {},
    "outputs": [
@@ -1320,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 548,
    "id": "c038d8c8",
    "metadata": {},
    "outputs": [
@@ -1329,6 +1332,7 @@
      "output_type": "stream",
      "text": [
       "Processing the 'heartRate' column: filled 1 missing values\n",
+      "The proportion of missing values in the heartRate column to the total: 0.02%\n",
       "Processed data saved successfully as 'framingham_filled.csv'\n"
      ]
     }
@@ -1343,6 +1347,8 @@
     "df['heartRate'] = df['heartRate'].fillna(median_heartRate)\n",
     "\n",
     "print(f\"Processing the 'heartRate' column: filled {missing_heartRate} missing values\")\n",
+    "missing_ratio = (missing_heartRate / len(df)) * 100\n",
+    "print(f\"The proportion of missing values in the heartRate column to the total: {missing_ratio:.2f}%\")\n",
     "\n",
     "df.to_csv('framingham_filled.csv', index=False)\n",
     "print(\"Processed data saved successfully as 'framingham_filled.csv'\")"
@@ -1350,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 549,
    "id": "3a5b6366",
    "metadata": {},
    "outputs": [
@@ -1411,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 550,
    "id": "3f86a4dd",
    "metadata": {},
    "outputs": [
@@ -1420,6 +1426,7 @@
      "output_type": "stream",
      "text": [
       "Processing the 'glucose' column: filled 386 missing values\n",
+      "The proportion of missing values in the glucose column to the total: 9.22%\n",
       "Processed data saved successfully as 'framingham_filled.csv'\n"
      ]
     }
@@ -1435,13 +1442,16 @@
     "\n",
     "print(f\"Processing the 'glucose' column: filled {missing_glucose} missing values\")\n",
     "\n",
+    "missing_ratio = (missing_glucose / len(df)) * 100\n",
+    "print(f\"The proportion of missing values in the glucose column to the total: {missing_ratio:.2f}%\")\n",
+    "\n",
     "df.to_csv('framingham_filled.csv', index=False)\n",
     "print(\"Processed data saved successfully as 'framingham_filled.csv'\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 551,
    "id": "efbe7f35",
    "metadata": {},
    "outputs": [
@@ -1502,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 552,
    "id": "dc2f7fa3",
    "metadata": {},
    "outputs": [
@@ -1560,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 553,
    "id": "b49675ae",
    "metadata": {},
    "outputs": [
@@ -1638,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 554,
    "id": "b77828ac",
    "metadata": {},
    "outputs": [
@@ -1698,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 555,
    "id": "b5213e14",
    "metadata": {},
    "outputs": [
@@ -1767,7 +1777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 556,
    "id": "c4a7df8f",
    "metadata": {},
    "outputs": [
@@ -1820,7 +1830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 557,
    "id": "899c65e5",
    "metadata": {},
    "outputs": [
@@ -1898,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 558,
    "id": "6c2cb902",
    "metadata": {},
    "outputs": [
