更新了数据处理总结，更改了最终结论

--- a/CHD_data_analysis.ipynb
+++ b/CHD_data_analysis.ipynb
@@ -1649,6 +1649,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "724f38c1",
+   "metadata": {},
+   "source": [
+    "Summary: Based on the online search for the reasonable values of glucose and cholesterol in medicine, it was found that the data on the table was normal. Such values could exist. For instance, if the surveyed individuals had diabetes or other diseases, the data on the table would all be within the acceptable range.We have dealt with all the missing data in the data table."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9827b491",
    "metadata": {},
    "source": [
@@ -2230,40 +2238,59 @@
     "As part of this study, a dataset from the Framingham Heart Study was analyzed to assess the impact of demographic, behavioral, and physiological factors on an individual’s likelihood of developing coronary heart disease (CHD) within the next ten years.\n",
     "\n",
     "The main stages of the work included:\n",
+    "\n",
     "Importing data from a CSV file into a DataFrame.\n",
     "Preliminary review and data cleaning: Standardizing variable formats and correcting inconsistent entries.Removing duplicate or invalid records.Handling missing values through imputation using median values or other suitable statistical methods.Verifying data consistency and plausibility based on medical knowledge and related variables.\n",
     "Conducting analytical research: Assessing the relationship between age and CHD risk.Exploring gender differences in CHD incidence.Investigating the influence of smoking status on CHD risk.Evaluating the relationship between blood pressure, cholesterol levels, and CHD probability.Examining how BMI and glucose levels contribute to CHD development.Identifying the combined effect of comorbidities such as diabetes, hypertension, and stroke history on CHD likelihood.\n",
     "\n",
-    "The main conclusions:\n",
-    "\n",
-    "Age is one of the strongest predictors of CHD risk. The probability of developing CHD increases steadily with age, especially among men.\n",
-    "Gender shows a significant difference — males have a higher risk of CHD than females, possibly due to both lifestyle and physiological factors.\n",
-    "Smoking has a substantial adverse impact on cardiovascular health. Smokers exhibit nearly double the 10-year CHD incidence compared to non-smokers.\n",
-    "Blood pressure is significantly associated with CHD risk. Both systolic and diastolic pressures are higher in individuals who developed CHD (mean systolic ≈ 143.6 mmHg vs. 130.3 mmHg for non-CHD).\n",
-    "Cholesterol level demonstrates a positive correlation with CHD risk. Elevated total cholesterol is a major predictor of future heart disease.\n",
-    "Body Mass Index (BMI) is positively related to the coexistence of multiple chronic conditions (e.g., diabetes, hypertension, stroke), highlighting obesity as a key risk amplifier.\n",
-    "Blood glucose levels show a continuous relationship with CHD risk — the probability of CHD increases even from the “high-normal” or “prediabetic” range, and exceeds 40% when glucose surpasses 180 mg/dL.\n",
-    "Comorbidities such as diabetes, hypertension, and prior stroke substantially increase CHD risk, reinforcing their importance in preventive screening.\n",
-    "\n",
     "Overall conclusion:\n",
     "\n",
-    "The occurrence of coronary heart disease is driven by a combination of demographic, lifestyle, and metabolic factors. Among them, age, smoking, high blood pressure, high glucose, and high cholesterol are the most significant risk contributors.\n",
-    "Through early lifestyle interventions, smoking cessation, routine health monitoring, and personalized medical management, both individuals and healthcare providers can effectively reduce the ten-year risk of CHD and enhance long-term cardiovascular health outcomes.\n",
+    "* The development of Coronary Heart Disease (CHD) is influenced by a combination of demographic, behavioral, and metabolic factors.\n",
+    "* Among these, age, smoking, hypertension, hypercholesterolemia, and hyperglycemia emerge as the most significant and consistent predictors of 10-year CHD risk.\n",
+    "\n",
+    "The main conclusion:\n",
+    "\n",
+    "1. Age\n",
+    "    * Age shows a strong positive correlation with CHD risk, particularly after 50 years of age.\n",
+    "    * The effect is more pronounced among men, indicating faster risk progression with age.\n",
+    "\n",
+    "2. Gender Differences\n",
+    "    * Males exhibit a substantially higher incidence of CHD than females, underscoring the need for earlier screening and intervention in men.\n",
+    "\n",
+    "3. Smoking\n",
+    "    * Smokers have nearly twice the 10-year CHD incidence compared to non-smokers, confirming smoking as one of the most critical modifiable risk factors.\n",
+    "\n",
+    "4. Blood Pressure\n",
+    "    * Both systolic and diastolic pressures are significantly associated with CHD occurrence.\n",
+    "    * Individuals with CHD show notably higher mean systolic blood pressure (≈143.6 mmHg vs. 130.3 mmHg in non-CHD).\n",
+    "    * Effective blood pressure control can markedly reduce CHD risk.\n",
+    "\n",
+    "5. Cholesterol\n",
+    "    * Total cholesterol demonstrates a clear positive relationship with CHD probability.\n",
+    "    * Elevated cholesterol is a reliable independent predictor of future CHD.\n",
+    "\n",
+    "6. Blood Glucose\n",
+    "    * CHD risk rises continuously with increasing blood glucose levels, even within the “high-normal” or prediabetic range.\n",
+    "    * When glucose exceeds 180 mg/dL, CHD probability surpasses 40%.\n",
+    "\n",
+    "7. Body Mass Index (BMI) and Comorbidities\n",
+    "    * Higher BMI correlates with the coexistence of chronic conditions such as diabetes, hypertension, and stroke.\n",
+    "    * Obesity acts as a key risk amplifier.\n",
+    "    * The presence of comorbidities (diabetes, hypertension, prior stroke) further increases CHD risk in a cumulative manner.\n",
     "\n",
     "Recommendations:\n",
     "\n",
-    "Early prevention and health monitoring:\n",
-    "Intervene early for individuals whose blood pressure, glucose, or cholesterol are within the high-normal range. Preventive lifestyle management should start before disease onset.\n",
-    "Comprehensive smoking cessation programs:\n",
-    "Since smoking is among the most influential modifiable risk factors, large-scale public health efforts to reduce smoking rates are critical for lowering CHD incidence.\n",
-    "Promote weight management and physical activity:\n",
-    "Encourage regular aerobic exercise and balanced nutrition to control BMI, thus reducing the risk of multi-disease comorbidity and subsequent CHD.\n",
-    "Regular cardiovascular screening:\n",
-    "Implement annual checks of blood pressure, fasting glucose, and cholesterol, especially for middle-aged and older adults, to enable early detection and risk stratification.\n",
-    "Personalized healthcare strategies:\n",
-    "Use predictive models based on these findings to classify individuals by risk level and tailor prevention, treatment, and monitoring plans accordingly.\n",
-    "Healthcare system application:\n",
-    "Medical institutions can integrate CHD risk prediction models into their clinical decision systems to improve resource allocation and guide targeted prevention strategies."
+    "1. Early Prevention and Lifestyle Interventions\n",
+    "    * Encourage early action for individuals with high-normal blood pressure, cholesterol, or glucose levels.\n",
+    "    * Promote smoking cessation, healthy diets, and regular exercise to reduce modifiable risk factors.\n",
+    "\n",
+    "2. Regular Health Monitoring and Risk Assessment\n",
+    "    * Implement annual cardiovascular screenings (blood pressure, glucose, cholesterol) for middle-aged and older adults.\n",
+    "    * Use predictive risk models to identify high-risk individuals for targeted prevention and monitoring.\n",
+    "\n",
+    "3. Healthcare System and Policy Support\n",
+    "    * Integrate CHD risk prediction tools into clinical systems to support personalized care and efficient resource allocation.\n",
+    "    * Strengthen public health campaigns focused on smoking reduction, weight management, and cardiovascular health awareness."
    ]
   }
  ],
